Worked on api and skycon canvas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 class="timezone">Timezone</h1>
   <canvas class="icon" width="128" height="128"></canvas>
 </div>
-<div class="temperature-section">
+<div class="temperature">
   <div class="degree-section">
   <h2 class="temperature-degree">34</h2>
   <span>F</span>
